# hospitalBeds

./: .gitignore  CMakeLists.txt  README.md  bed.cpp  bed.h  beds.cpp  beds.h  client.cpp  client.h  conditions.h  db_connection.cpp  db_connection.h  doctorwindow.cpp  doctorwindow.h  doctorwindow.ui  hospital.cpp  hospital.h  hospitalBeds.db  hospitalwindow.cpp  hospitalwindow.h  hospitalwindow.ui  json_def.h  main.cpp  patient.cpp  patient.h  query.h  server.cpp  server.h  sqlite3.h
